# on-tour-app-beta

./: .env.example  .env.vercel  .env.vercel.example  .eslintrc.json  .firebaserc  .gitignore  .npmrc  .vercelignore  CALENDAR_FIXES_SUMMARY.md  CHANGELOG_v2.2.1.md  COMPLETE_PROJECT_DESCRIPTION.md  DESKTOP_DESIGN_SYSTEM.md  Dockerfile  FIREBASE_AUDIT_REPORT.md  FIREBASE_DATABASE_AUDIT.md  FIREBASE_OAUTH_SETUP.md  FIREBASE_TENANTS_AUDIT.md  FIRESTORE_SETUP.md  FIRESTORE_SETUP.md.old  FIRESTORE_SYNC_STATUS.md  FRAMER_MOTION_PROGRESS.md  MIGRATION_PLAN_ORG_PATHS.md  OPTIMIZATIONS_ROUND_2.md  OPTIMIZATION_SUMMARY.md  ORG_MIGRATION_COMPLETE.md  PERFORMANCE_OPTIMIZATIONS_2025.md  PERFORMANCE_QUICK_GUIDE.md  PRODUCTION_CHECKLIST.md  PROPHECY_FIREBASE_MIGRATION.md  README.md  README.old.md  REGISTRO_NUEVOS_USUARIOS.md  SERVICE_WORKER_FIXES.md  TASK_9_SERVICE_WORKER_COMPLETION.md  TIMELINE_FIX.md  VERCEL_ENV_VARS.md  VERCEL_SETUP.md  add-missing-es-translations.mjs  analyze-performance.cjs  build.sh  (+46 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
api/: calendar-sync.ts  echo.ts  health.ts  test-firebase.ts  test.ts  timeline.ts  tsconfig.json  utils.ts
backend/: .env.example  .eslintrc.json  .gitignore  AUDIT_RESPONSE.md  DATABASE_SETUP.md  DOCUMENTATION_INDEX.md  FIREBASE_INTEGRATION.md  README.md  SECURITY_IMPROVEMENTS.md  SESSION_COMPLETE.md  TESTING_GUIDE.md  package-lock.json  package.json  tsconfig.json
dev-dist/: sw.js  workbox-3567431b.js
docker/: default.conf  nginx.conf
wasm-financial-engine/: Cargo.toml
wasm-financial-engine/src/: lib.rs
(+2144 files in other folders)
